# lucifer

./: .env.example  .gitignore  BUILD_COMPLETE.md  COMPLETE.md  CONTRIBUTING.md  CREDITS_DONATION_UPDATE.md  DONATE.md  INSTALL_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  create-desktop-entry.sh  install-gui.sh  install.sh  pyproject.toml  release_notes.md  script.js  validate.sh
.github/: ISSUE_TEMPLATE.md
examples/: __init__.py  basic_recon.py  custom_workflow.py  screenshot_analysis.py
gui/: GUI_README.md  lucifer-gui  package.json
gui/electron/: main.js  preload.js
gui/public/: index.html  manifest.json
gui/src/: App.js  index.css
gui/src/components/: AboutModal.js  DonateModal.js  Header.js  OutputPanel.js  SettingsModal.js  Sidebar.js  Terminal.js  WorkflowPanel.js
src/lucifer/: __init__.py  cli.py  server.py
src/lucifer/automation/: __init__.py  workflows.py
src/lucifer/core/: __init__.py  ai_engine.py  assistant.py  config.py  terminal_capture.py  vision.py
src/lucifer/utils/: __init__.py  logger.py  report_generator.py
tests/: conftest.py  test_config.py  test_report_generator.py  test_terminal_capture.py  test_vision.py
website/: index.html  styles.css
